<resources>
    <string name="app_name">ClimaApp</string>
    <string name="n_a">N/A</string>
    <string name="buscar_ciudad">Buscar ciudad</string>
    <string name="temp_max">Temp Max</string>
    <string name="humedad">Humedad</string>
    <string name="viento">Viento</string>
    <string name="iconodelestadodelclima">IconoDelEstadoDelClima</string>
    <string name="temp_min">Temp Min</string>
    <string name="error_intentar_otra_vez">Error, intentar otra vez</string>
    <string name="ºc">ºC</string>
    <string name="historial">Historial</string>
    <string name="_1">1</string>
</resources>